# SQL_QUERRY_AGENT

./: GOOGLE_AI_SETUP.md  README.md  package.json  run-tests.sh
.github/workflows/: ci.yml  integration-tests.yml
backend/: .env  .env.example  README.md  locust_config.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed_e2e.py  test_llm_fix.py  test_llm_simple.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: history.py  query.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: query_history.py  schema_statistics.py  user.py
backend/app/schemas/: query_history.py  user.py
backend/app/services/: llm_agent.py  llm_service.py  query_service.py  schema_service.py  statistics_service.py
backend/tests/: conftest.py  load_tests.py  test_ai_correctness.py  test_auth_oauth_token.py  test_benchmarks.py  test_connection_pool.py  test_database_core.py  test_database_integration.py  test_error_handling.py  test_history_api.py  test_llm_network.py  test_llm_service.py  test_main.py  test_performance.py  test_performance_limits.py  test_permissions.py  test_query_api.py  test_query_api_custom_db.py  test_query_execution.py  test_query_optimization.py  test_rbac.py  test_rbac_simple.py  test_schema_service.py  test_security_injections.py
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: accessibility.spec.ts  auth-journey.spec.ts  concurrent-operations.spec.ts  dashboard-query.spec.ts  database-failure.spec.ts  error-flow.spec.ts  history-flow.spec.ts  llm-failure.spec.ts  query-flow.spec.ts  (+5 more)
google_sheets_extension/: Code.gs  index.html
scripts/: e2e-backend.ps1  e2e-backend.sh
(+29 files in other folders)
